--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -62,6 +62,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tab_text_5" />
 
+            <android.support.design.widget.TabItem
+                android:id="@+id/tabItem6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tab_text_6" />
+
 
         </android.support.design.widget.TabLayout>
 
