--- a/app/src/main/res/layout/fragment_monday1.xml
+++ b/app/src/main/res/layout/fragment_monday1.xml
@@ -1,4 +1,5 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
@@ -12,14 +13,16 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="53dp">
 
-        <ListView
-            android:id="@+id/android:list"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="51dp"></ListView>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 
