--- a/app/src/main/res/layout/fragment_monday1.xml
+++ b/app/src/main/res/layout/fragment_monday1.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.azia.diplom.ScheduleActivity$PlaceholderFragment">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -13,8 +12,13 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="53dp">
 
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
+            android:id="@+id/l_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
