--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="10dp"
@@ -18,20 +17,22 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <CheckBox
-            android:id="@+id/il_checkbox"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/del_sc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:srcCompat="@drawable/ic_launcher_background"
-            tools:ignore="VectorDrawableCompat" />
+            android:layout_gravity="end|bottom"
+            android:layout_margin="3dp"
+            android:src="@drawable/ic_delete"
+            app:backgroundTint="@android:color/white"
+            app:fabSize="mini" />
 
         <LinearLayout
             android:id="@+id/il_titletext_ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@id/il_checkbox"
-            android:layout_toRightOf="@id/il_checkbox"
+            android:layout_toEndOf="@id/del_sc"
+            android:layout_toRightOf="@id/del_sc"
             android:orientation="vertical">
 
             <TextView
