добавление предмета и препода END

--- a/app/src/main/res/layout/content_object.xml
+++ b/app/src/main/res/layout/content_object.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.azia.diplom.mainMenu.MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".object.ObjectActivity"
+    tools:showIn="@layout/activity_object">
+
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/ob2_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
