--- a/app/src/main/res/layout/content_timer.xml
+++ b/app/src/main/res/layout/content_timer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TimerActivity"
+    tools:context=".timer.TimerActivity"
     tools:showIn="@layout/activity_timer">
 
     <TextView
