--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -53,7 +53,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:paddingLeft="10dp"
-                android:singleLine="true"
+                android:singleLine="false"
                 android:text="Batman Vs Superman"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ffffff"
