--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -71,6 +71,13 @@
                 android:padding="5dp"
                 android:text="days" />
 
+            <TextView
+                android:id="@+id/sc_teacher"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                android:text="teacher" />
+
         </LinearLayout>
 
 
