--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,13 @@
         <item name="colorAccent">@color/redDark</item>
     </style>
 
+    <style name="ThemeApp4" parent="ThemeApp3">
+        <item name="colorPrimary">@color/bluePantone</item>
+        <item name="colorAccent">@color/bluePantone</item>
+        <item name="android:textColorPrimary">@color/cardview_light_background</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="android:colorBackground">@color/cardview_light_background</item>
+        <item name="android:colorForeground">@color/colorAccent</item>
+    </style>
+
 </resources>
