--- a/app/src/main/res/layout/object.xml
+++ b/app/src/main/res/layout/object.xml
@@ -50,6 +50,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="@font/rus2"
+                android:textStyle="bold"
                 app:layout_constraintVertical_bias="0.015" />
 
             <TextView
@@ -68,6 +70,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ob_tv_object"
+                android:fontFamily="@font/rus2"
+                android:textStyle="bold"
                 app:layout_constraintVertical_bias="0.015" />
 
         </LinearLayout>
