--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -77,6 +77,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_schedulemain"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
@@ -87,5 +88,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add2"
         app:backgroundTint="@android:color/black" />
+
 
 </android.support.design.widget.CoordinatorLayout>
