--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,13 @@
     <color name="colorAccent">#be0a31</color>
     <color name="accent_material_light_1">#d640ffff</color>
     <color name="accent_material_light_2">#d540ffff</color>
-    <color name="white">#990000</color>
+    <color name="white">#ffffff</color>
     <color name="redDark">#040404</color>
     <color name="black">#0a0e33</color>
     <color name="blackRock">#0a0e33</color>
     <color name="bluePantone">#0023ab</color>
     <color name="blueWinter">#c9edfd</color>
     <color name="foreground_material_light">#dc5454</color>
+    <color name="color_schedule">#07bcf9</color>
+    <color name="color_schedulemain">#e2e2e4</color>
 </resources>
