--- a/app/src/main/res/layout/homework.xml
+++ b/app/src/main/res/layout/homework.xml
@@ -113,6 +113,13 @@
                 app:layout_constraintTop_toBottomOf="@id/hw_tv_teacher"
                 app:layout_constraintVertical_bias="0.015" />
 
+            <ImageView
+                android:id="@+id/hw_iv_image"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
+                app:srcCompat="@mipmap/icon" />
+
+
         </LinearLayout>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
