--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -8,12 +8,14 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.azia.diplom.schedule.ScheduleActivity">
 
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
+
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -23,7 +25,7 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/app_name">
+            app:title="Ваше расписание">
 
         </android.support.v7.widget.Toolbar>
 
@@ -73,6 +75,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -89,5 +92,5 @@
         android:src="@drawable/ic_add2"
         app:backgroundTint="@android:color/black" />
 
-
 </android.support.design.widget.CoordinatorLayout>
+
